Minnor fix on test template

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ https://templatemo.com/tm-526-vanilla
                             <div class="service-item">
                                 <h4>Google</h4>
                                 <div class="line-dec"></div>
-                                <a class="boton_respuesta" href="tests/test.html">Empezar test</a>
+                                <a class="boton_respuesta" href="tests/testGoogle1.html">Empezar test</a>
                             </div>
                         </div>
                         <div class="col-md-4">
