--- a/tests/test.html
+++ b/tests/test.html
@@ -7,15 +7,15 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/fontAwesome.css">
-        <link rel="stylesheet" href="css/hero-slider.css">
-        <link rel="stylesheet" href="css/templatemo-test.css">
-        <link rel="stylesheet" href="css/owl-carousel.css">
+        <link rel="stylesheet" href="../css/bootstrap.min.css">
+        <link rel="stylesheet" href="../css/fontAwesome.css">
+        <link rel="stylesheet" href="../css/hero-slider.css">
+        <link rel="stylesheet" href="../css/templatemo-test.css">
+        <link rel="stylesheet" href="../css/owl-carousel.css">
 
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
 
-        <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+        <script src="../js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
 
 <body>
@@ -26,14 +26,8 @@
             <div class="first-content">
                 <span>Preguunta .....el producto eres tú</span>
                 <div class="botones">
-                <div class="primary-button">
-                    <a href="#services">SI</a>
-                    
-                </div>
-                <div class="primary-button">
-                    <a href="#services">NO</a>
-                    
-                </div>
+                    <a class = "primary-button1" href="#services">SI</a>
+                    <a class = "primary-button2" href="#services">NO</a>
                 </div>
             </div>
         </div>
@@ -42,10 +36,10 @@
 
    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-    <script src="js/vendor/bootstrap.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
+    <script>window.jQuery || document.write('<script src="../js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+    <script src="../js/vendor/bootstrap.min.js"></script>
+    <script src="../js/plugins.js"></script>
+    <script src="../js/main.js"></script>
     <script>
         function openCity(cityName) {
             var i;
