--- a/tests/amazon1-1.html
+++ b/tests/amazon1-1.html
@@ -24,10 +24,14 @@
 <div class="parallax-content baner-content" id="home">
     <div class="container">
         <div class="first-content">
-            <span>¿Utilizas o has utilizado algún servicio de Amazon?</span>
+            <span>¿Qué información has proporcionado al crear tu cuenta?</span>
+            <label><input type="checkbox" id="5" name="5" value="5"> IP</label>
+            <label><input type="checkbox" id="1" name="1" value="1"> Nombre</label>
+            <label><input type="checkbox" id="2" name="2" value="2"> Teléfono móvil</label>
+            <label><input type="checkbox" id="3" name="3" value="3"> Correo electrónico</label>
+            <label><input type="checkbox" id="4" name="4" value="4"> Ubicación </label>
             <div class="botones">
-                <a class = "primary-button1" href="amazon1-1.html">SI</a>
-                <a class = "primary-button2" href="amazon1-2.html">NO</a>
+                <a class = "primary-button2" href="amazon2.html">OK</a>
             </div>
         </div>
     </div>
