--- a/tests/amazon1-2.html
+++ b/tests/amazon1-2.html
@@ -26,8 +26,8 @@
         <div class="first-content">
             <span>¿Utilizas o has utilizado algún servicio de Amazon?</span>
             <div class="botones">
-                <a class = "primary-button1" href="amazon1-1.html">SI</a>
-                <a class = "primary-button2" href="amazon1-2.html">NO</a>
+                <a class = "primary-button1" href="amazon1-2.html">SI</a>
+                <a class = "primary-button2" href="#services">NO</a>
             </div>
         </div>
     </div>
