--- a/tests/amazon/amazon1.html
+++ b/tests/amazon/amazon1.html
@@ -7,11 +7,11 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/fontAwesome.css">
-    <link rel="stylesheet" href="../css/hero-slider.css">
-    <link rel="stylesheet" href="../css/templatemo-amazon.css">
-    <link rel="stylesheet" href="../css/owl-carousel.css">
+    <link rel="stylesheet" href="../../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../css/fontAwesome.css">
+    <link rel="stylesheet" href="../../css/hero-slider.css">
+    <link rel="stylesheet" href="../../css/templatemo-amazon.css">
+    <link rel="stylesheet" href="../../css/owl-carousel.css">
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
 
@@ -26,8 +26,8 @@
         <div class="first-content">
             <span>¿Utilizas o has utilizado algún servicio de Amazon?</span>
             <div class="botones">
-                <a class = "primary-button1" href="amazon1-1.html">SI</a>
-                <a class = "primary-button2" href="amazon1-2.html">NO</a>
+                <a class = "primary-button1" href="amazon2.html">SI</a>
+                <a class = "primary-button2" href="amazon2.html">NO</a>
             </div>
         </div>
     </div>
