--- a/tests/amazon/amazon2.html
+++ b/tests/amazon/amazon2.html
@@ -7,11 +7,11 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/fontAwesome.css">
-    <link rel="stylesheet" href="../css/hero-slider.css">
-    <link rel="stylesheet" href="../css/templatemo-amazon.css">
-    <link rel="stylesheet" href="../css/owl-carousel.css">
+    <link rel="stylesheet" href="../../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../css/fontAwesome.css">
+    <link rel="stylesheet" href="../../css/hero-slider.css">
+    <link rel="stylesheet" href="../../css/templatemo-amazon.css">
+    <link rel="stylesheet" href="../../css/owl-carousel.css">
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
 
@@ -24,14 +24,10 @@
 <div class="parallax-content baner-content" id="home">
     <div class="container">
         <div class="first-content">
-            <span>¿Qué información has proporcionado al crear tu cuenta?</span>
-            <label><input type="checkbox" id="5" name="5" value="5"> IP</label>
-            <label><input type="checkbox" id="1" name="1" value="1"> Nombre</label>
-            <label><input type="checkbox" id="2" name="2" value="2"> Teléfono móvil</label>
-            <label><input type="checkbox" id="3" name="3" value="3"> Correo electrónico</label>
-            <label><input type="checkbox" id="4" name="4" value="4"> Ubicación </label>
+            <span>¿Al crear una cuenta en Amazon crees que además del correo electrónico te piden un teléfono?</span>
             <div class="botones">
-                <a class = "primary-button2" href="amazon2.html">OK</a>
+                <a class = "primary-button1" href="amazon3.html">SI</a>
+                <a class = "primary-button2" href="amazon3.html">NO</a>
             </div>
         </div>
     </div>
