--- a/tests/amazon/amazon4.html
+++ b/tests/amazon/amazon4.html
@@ -24,10 +24,9 @@
 <div class="parallax-content baner-content" id="home">
     <div class="container">
         <div class="first-content">
-            <span>¿Te piden que proporciones tu ubicación?</span>
+            <span>A priori solo debes dar tu nombre y un correo electrónico</span>
             <div class="botones">
-                <a class = "primary-button1" href="amazon4.html">SI</a>
-                <a class = "primary-button2" href="amazon4.html">NO</a>
+                <a class = "primary-button2" href="amazon5.html" style="margin-left: 35%">OK</a>
             </div>
         </div>
     </div>
