--- a/tests/amazon/amazon7.html
+++ b/tests/amazon/amazon7.html
@@ -24,10 +24,10 @@
 <div class="parallax-content baner-content" id="home">
     <div class="container">
         <div class="first-content">
-            <span>¿Te piden que proporciones tu ubicación?</span>
+            <span>Podemos concluir tras tu respuesta anterior que Amazon no ofrece ofertas personalizadas para cada usuario. ¿Estás de acuerdo? </span>
             <div class="botones">
-                <a class = "primary-button1" href="amazon4.html">SI</a>
-                <a class = "primary-button2" href="amazon4.html">NO</a>
+                <a class = "primary-button1" href="amazon11.html">SI</a>
+                <a class = "primary-button2" href="amazon12.html">NO</a>
             </div>
         </div>
     </div>
