--- a/tests/amazon/amazon10.html
+++ b/tests/amazon/amazon10.html
@@ -24,10 +24,10 @@
 <div class="parallax-content baner-content" id="home">
     <div class="container">
         <div class="first-content">
-            <span>¿Te piden que proporciones tu ubicación?</span>
+            <span>Amazon ofrece ofertas personalizadas gracias a la infomación que recopila de sus usuarios. ¿Es esto cierto?</span>
             <div class="botones">
-                <a class = "primary-button1" href="amazon4.html">SI</a>
-                <a class = "primary-button2" href="amazon4.html">NO</a>
+                <a class = "primary-button1" href="amazon9.html">SI</a>
+                <a class = "primary-button2" href="amazon9.html">NO</a>
             </div>
         </div>
     </div>
