--- a/tests/amazon/amazon11.html
+++ b/tests/amazon/amazon11.html
@@ -24,10 +24,10 @@
 <div class="parallax-content baner-content" id="home">
     <div class="container">
         <div class="first-content">
-            <span>¿Te piden que proporciones tu ubicación?</span>
+            <span>¡Respuesta incorrecta! Amazon recopila muchos más datos de los que aportas como usuario para poder generar un perfil y, así, poder ofrecer ofertas personalizadas. </span>
+            <span>Sabiendo esto, pasa a la siguiente pregunta</span>
             <div class="botones">
-                <a class = "primary-button1" href="amazon4.html">SI</a>
-                <a class = "primary-button2" href="amazon4.html">NO</a>
+                <a class = "primary-button2" href="amazon6.html" style="margin-left: 35%">OK</a>
             </div>
         </div>
     </div>
