--- a/tests/amazon/amazon6.html
+++ b/tests/amazon/amazon6.html
@@ -24,10 +24,10 @@
 <div class="parallax-content baner-content" id="home">
     <div class="container">
         <div class="first-content">
-            <span>¿Te piden que proporciones tu ubicación?</span>
+            <span>¿Crees que Amazon conoce la ubicación de tus dispositivos?</span>
             <div class="botones">
-                <a class = "primary-button1" href="amazon4.html">SI</a>
-                <a class = "primary-button2" href="amazon4.html">NO</a>
+                <a class = "primary-button1" href="amazon8.html">SI</a>
+                <a class = "primary-button2" href="amazon8.html">NO</a>
             </div>
         </div>
     </div>
