--- a/tests/amazon/amazon9.html
+++ b/tests/amazon/amazon9.html
@@ -24,10 +24,10 @@
 <div class="parallax-content baner-content" id="home">
     <div class="container">
         <div class="first-content">
-            <span>¿Te piden que proporciones tu ubicación?</span>
+            <span>Di si la siguiente afirmación es cierta: Amazon recopila datos de forma automática pero nunca llega a ser intrusivo.</span>
             <div class="botones">
-                <a class = "primary-button1" href="amazon4.html">SI</a>
-                <a class = "primary-button2" href="amazon4.html">NO</a>
+                <a class = "primary-button1" href="amazon13.html">SI</a>
+                <a class = "primary-button2" href="amazon14.html">NO</a>
             </div>
         </div>
     </div>
