--- a/tests/amazon/amazon15.html
+++ b/tests/amazon/amazon15.html
@@ -24,7 +24,7 @@
 <div class="parallax-content baner-content" id="home">
     <div class="container">
         <div class="first-content">
-            <span>A través de browser fingerprinting, Amazon recaba información privada como la IP (consiguen tu ubicación) entre otras muchs cosas aunque tengas las cookies desactivadas. Saben perfectamente quién eres en cuanto accedes a sus servicios.</span>
+            <span>A través de browser fingerprinting, Amazon recaba información privada como la IP (consiguen tu ubicación) entre otras muchas cosas aunque tengas las cookies desactivadas. Saben perfectamente quién eres en cuanto accedes a sus servicios.</span>
             <div class="botones">
                 <a class = "primary-button2" href="amazon16.html" style="margin-left: 35%">OK</a>
             </div>
