--- a/tests/amazon/amazon1.html
+++ b/tests/amazon/amazon1.html
@@ -33,6 +33,8 @@
     </div>
 </div>
 
+respuestas:[-,NO,NO,-,SI,SI,NO,NO,NO,SI,-,-,SI,SI,-,NO,SI,NO,SI,SI,NO,SI,NO,NO,-]
+
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
