--- a/tests/amazon/amazon11.html
+++ b/tests/amazon/amazon11.html
@@ -21,7 +21,7 @@
 <body>
 
 
-<div class="parallax-content baner-content" id="home">
+<div class="parallax-content baner-content" id="home" style="padding-top: 10vh">
     <div class="container">
         <div class="first-content">
             <span>¡Respuesta incorrecta! Amazon recopila muchos más datos de los que aportas como usuario para poder generar un perfil y, así, poder ofrecer ofertas personalizadas. </span>
