--- a/tests/amazon/amazon12.html
+++ b/tests/amazon/amazon12.html
@@ -21,7 +21,7 @@
 <body>
 
 
-<div class="parallax-content baner-content" id="home">
+<div class="parallax-content baner-content" id="home" style="padding-top: 10vh">
     <div class="container">
         <div class="first-content">
             <span>¡Exacto! Pero, para poder dar estas ofertas personalizadas, Amazon debe recopilar muchos más datos de los que aportas como usuario para poder generar un perfil de cada usuario. </span>
