--- a/tests/amazon/amazon15.html
+++ b/tests/amazon/amazon15.html
@@ -21,7 +21,7 @@
 <body>
 
 
-<div class="parallax-content baner-content" id="home">
+<div class="parallax-content baner-content" id="home" style="padding-top: 15vh">
     <div class="container">
         <div class="first-content">
             <span>A través de browser fingerprinting, Amazon recaba información privada como la IP (consiguen tu ubicación) entre otras muchas cosas aunque tengas las cookies desactivadas. Saben perfectamente quién eres en cuanto accedes a sus servicios.</span>
