--- a/tests/amazon/amazon25.html
+++ b/tests/amazon/amazon25.html
@@ -21,7 +21,7 @@
 <body>
 
 
-<div class="parallax-content baner-content" id="home">
+<div class="parallax-content baner-content" id="home" style="padding-top: 10vh">
     <div class="container">
         <div class="first-content">
             <span>Alexa siempre está escuchando en busca del comando que la activa. Sin embargo, no graba todas las conversaciones. Solo graba cuando se produce la interacción con Alexa. Empleados de Amazon escuchan únicamente las consultas que han producido fallo con el fin de mejorar el servicio. Estas grabaciones nunca se borrarán ni aunque lo solicites porque pueden estar en los sistemas de terceros. </span>
