--- a/tests/amazon/amazon7.html
+++ b/tests/amazon/amazon7.html
@@ -24,7 +24,7 @@
 <div class="parallax-content baner-content" id="home">
     <div class="container">
         <div class="first-content">
-            <span>Podemos concluir tras tu respuesta anterior que Amazon no ofrece ofertas personalizadas para cada usuario. ¿Estás de acuerdo? </span>
+            <span>Entonces crees que Amazon ofrece las mismas ofertas a todos los usuarios. ¿Estás de acuerdo? </span>
             <div class="botones">
                 <a class = "primary-button1" href="amazon11.html">SI</a>
                 <a class = "primary-button2" href="amazon12.html">NO</a>
