--- a/tests/amazon/amazon1.html
+++ b/tests/amazon/amazon1.html
@@ -31,6 +31,7 @@
             </div>
         </div>
     </div>
+    <img src="amzn.png" style="position: fixed;right: 20px;bottom: 20px;height: 150px;width: 200px">
 </div>
 
 respuestas:[-,NO,NO,-,SI,SI,NO,NO,NO,SI,-,-,SI,SI,-,NO,SI,NO,SI,SI,NO,SI,NO,NO,-]
