--- a/tests/amazon/amazon17.html
+++ b/tests/amazon/amazon17.html
@@ -32,6 +32,7 @@
             <footer>Nota: En los términos y condiciones, Amazon te da a entender que si te opones a que traten tus datos, no disfrutarás de todos sus servicios.</footer>
         </div>
     </div>
+    <img src="amzn.png" style="position: fixed;right: 20px;bottom: 20px;height: 150px;width: 200px">
 </div>
 
 
