--- a/tests/amazon/amazon14.html
+++ b/tests/amazon/amazon14.html
@@ -32,6 +32,7 @@
             <footer>*Browser fingerprinting: Identificación (casi única sin cookies) de usuarios analizando características del navegador y del dispositivo desde el que se conectan.</footer>
         </div>
     </div>
+    <img src="amzn.png" style="position: fixed;right: 20px;bottom: 20px;height: 150px;width: 200px">
 </div>
 
 
