--- a/tests/amazon/amazon20.html
+++ b/tests/amazon/amazon20.html
@@ -32,6 +32,7 @@
             <footer>*Alexa: Asistente virtual de voz desarrollado por Amazon.</footer>
         </div>
     </div>
+    <img src="amzn.png" style="position: fixed;right: 20px;bottom: 20px;height: 150px;width: 200px">
 </div>
 
 
