--- a/tests/amazon/amazon7.html
+++ b/tests/amazon/amazon7.html
@@ -31,6 +31,7 @@
             </div>
         </div>
     </div>
+    <img src="amzn.png" style="position: fixed;right: 20px;bottom: 20px;height: 150px;width: 200px">
 </div>
 
 
