--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ https://templatemo.com/tm-526-vanilla
                             <div class="service-item">
                                 <h4>Amazon</h4>
                                 <div class="line-dec"></div>
-                                <a class="boton_respuesta" href="tests/amazon/amazon1.html">Empezar test</a>
+                                <a class="boton_respuesta" href="tests/amazon/amazon.html">Empezar test</a>
                             </div>
                         </div>
                         <div class="col-md-4">
