--- a/tests/amazon/amazon.html
+++ b/tests/amazon/amazon.html
@@ -205,133 +205,133 @@
 
                         <div class="col-md-8">
                             <div class="row">
-                                <div class="col-md-4">
+                                <div class="col-md-4 P2">
                                     <div class="service-item">
                                         <h4>Pregunta 2</h4>
                                         <div class="line-dec"></div>
                                         <a class="boton_respuesta" href="tests/test.html">Empezar test</a>
                                     </div>
                                 </div>
-                                <div class="col-md-4">
+                                <div class="col-md-4 P3">
                                     <div class="service-item">
                                         <h4>Pregunta 3</h4>
                                         <div class="line-dec"></div>
                                         <a class="boton_respuesta" href="tests/test.html">Empezar test</a>
                                     </div>
                                 </div>
-                                <div class="col-md-4">
+                                <div class="col-md-4 P5">
                                     <div class="service-item">
                                         <h4>Pregunta 5</h4>
                                         <div class="line-dec"></div>
                                         <a class="boton_respuesta" href="tests/testGoogle1.html">Empezar test</a>
                                     </div>
                                 </div>
-                                <div class="col-md-4">
+                                <div class="col-md-4 P6">
                                     <div class="service-item">
                                         <h4>Pregunta 6</h4>
                                         <div class="line-dec"></div>
                                         <a class="boton_respuesta" href="tests/amazon/amazon1.html">Empezar test</a>
                                     </div>
                                 </div>
-                                <div class="col-md-4">
+                                <div class="col-md-4 P7">
                                     <div class="service-item">
                                         <h4>Pregunta 7</h4>
                                         <div class="line-dec"></div>
                                         <a class="boton_respuesta" href="tests/test.html">Empezar test</a>
                                     </div>
                                 </div>
-                                <div class="col-md-4">
+                                <div class="col-md-4 P8">
                                     <div class="service-item">
                                         <h4>Pregunta 8</h4>
                                         <div class="line-dec"></div>
                                         <a class="boton_respuesta" href="tests/test.html">Empezar test</a>
                                     </div>
                                 </div>
-                                <div class="col-md-4">
+                                <div class="col-md-4 P9">
                                     <div class="service-item">
                                         <h4>Pregunta 9</h4>
                                         <div class="line-dec"></div>
                                         <a class="boton_respuesta" href="tests/test.html">Empezar test</a>
                                     </div>
                                 </div>
-                                <div class="col-md-4">
+                                <div class="col-md-4 P10">
                                     <div class="service-item">
                                         <h4>Pregunta 10</h4>
                                         <div class="line-dec"></div>
                                         <a class="boton_respuesta" href="tests/test.html">Empezar test</a>
                                     </div>
                                 </div>
-                                <div class="col-md-4">
+                                <div class="col-md-4 P13">
                                     <div class="service-item">
                                         <h4>Pregunta 13</h4>
                                         <div class="line-dec"></div>
                                         <a class="boton_respuesta" href="tests/test.html">Empezar test</a>
                                     </div>
                                 </div>
-                                <div class="col-md-4">
+                                <div class="col-md-4 P14">
                                     <div class="service-item">
                                         <h4>Pregunta 14</h4>
                                         <div class="line-dec"></div>
                                         <a class="boton_respuesta" href="tests/test.html">Empezar test</a>
                                     </div>
                                 </div>
-                                <div class="col-md-4">
+                                <div class="col-md-4 P16">
                                     <div class="service-item">
                                         <h4>Pregunta 16</h4>
                                         <div class="line-dec"></div>
                                         <a class="boton_respuesta" href="tests/test.html">Empezar test</a>
                                     </div>
                                 </div>
-                                <div class="col-md-4">
+                                <div class="col-md-4 P17">
                                     <div class="service-item">
                                         <h4>Pregunta 17</h4>
                                         <div class="line-dec"></div>
                                         <a class="boton_respuesta" href="tests/test.html">Empezar test</a>
                                     </div>
                                 </div>
-                                <div class="col-md-4">
+                                <div class="col-md-4 P18">
                                     <div class="service-item">
                                         <h4>Pregunta 18</h4>
                                         <div class="line-dec"></div>
                                         <a class="boton_respuesta" href="tests/test.html">Empezar test</a>
                                     </div>
                                 </div>
-                                <div class="col-md-4">
+                                <div class="col-md-4 P19">
                                     <div class="service-item">
                                         <h4>Pregunta 19</h4>
                                         <div class="line-dec"></div>
                                         <a class="boton_respuesta" href="tests/test.html">Empezar test</a>
                                     </div>
                                 </div>
-                                <div class="col-md-4">
+                                <div class="col-md-4 P20">
                                     <div class="service-item">
                                         <h4>Pregunta 20</h4>
                                         <div class="line-dec"></div>
                                         <a class="boton_respuesta" href="tests/test.html">Empezar test</a>
                                     </div>
                                 </div>
-                                <div class="col-md-4">
+                                <div class="col-md-4 P21">
                                     <div class="service-item">
                                         <h4>Pregunta 21</h4>
                                         <div class="line-dec"></div>
                                         <a class="boton_respuesta" href="tests/test.html">Empezar test</a>
                                     </div>
                                 </div>
-                                <div class="col-md-4">
+                                <div class="col-md-4 P22">
                                     <div class="service-item">
                                         <h4>Pregunta 22</h4>
                                         <div class="line-dec"></div>
                                         <a class="boton_respuesta" href="tests/test.html">Empezar test</a>
                                     </div>
                                 </div>
-                                <div class="col-md-4">
+                                <div class="col-md-4 P23">
                                     <div class="service-item">
                                         <h4>Pregunta 23</h4>
                                         <div class="line-dec"></div>
                                         <a class="boton_respuesta" href="tests/test.html">Empezar test</a>
                                     </div>
                                 </div>
-                                <div class="col-md-4">
+                                <div class="col-md-4 P24">
                                     <div class="service-item">
                                         <h4>Pregunta 24</h4>
                                         <div class="line-dec"></div>
