--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
-
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/fontAwesome.css">
         <link rel="stylesheet" href="css/hero-slider.css">
@@ -112,6 +111,10 @@ https://templatemo.com/tm-526-vanilla
                     <div class="footer_button">
                         <a href="#home">Back To Top</a>
                     </div>
+                    <!-- Contador de visitas -->
+                        <p class="contador-txt"> Nº de tests realizados</p>
+                        <img class="contador-img" style="border: 0px solid; display: inline;" alt="contador de visitas" src="http://www.websmultimedia.com/contador-de-visitas.php?id=288972"></a>
+                    
                     <ul>
                         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
