--- a/tests/amazon/amazon.html
+++ b/tests/amazon/amazon.html
@@ -363,6 +363,7 @@
         </div>
     </div>
     <img id="imagenAmzn" src="amzn.png" style="position: fixed;right: 20px;bottom: 20px;height: 150px;width: 200px">
+    <a href="../../index.html" style="position: fixed;left: 20px;top: 20px;font-size: 2em;">	&#8592 Tests</a>
 </div>
 
 <script>
