--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ https://templatemo.com/tm-526-vanilla
                     <ul>
                         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                        <li><a target="_blank" href="https://www.instagram.com/testeateconuwu/"><i class="fa fa-instagram"></i></a></li>
 
                     </ul>
                 </div>
