Fixed: imagen de la respuesta 2 no escalaba.

--- a/tests/google/testGoogle.html
+++ b/tests/google/testGoogle.html
@@ -126,7 +126,7 @@
                           <p>Google determina tu nivel de estudios y muchos otros aspectos de tu vida gracias al uso que haces de sus servicios.</p>
                           <a class="boton_respuesta" target="_blank" href="https://adssettings.google.com/u/4/authenticated?hl=es ">Más info</a>
                         </div>
-                        <img src="../../img/google/estudios.png" width="150" height="150">
+                        <img class ="imagen_estudios" src="../../img/google/estudios.png">
                       </div>
                     </div>
                   </div>
