--- a/tests/google/testGoogle.html
+++ b/tests/google/testGoogle.html
@@ -27,63 +27,63 @@
       <div class="pregunta1">
         <span class="pregunta-google">¿Crees que Google sabe si tienes pareja o hijos?</span>
         <div class="botones">
-          <a class="primary-button1" href="#services" onclick="eligeTest()">Sí</a>
+          <a class="primary-button1" href="#services" onclick="eligeTest()">&nbspSí&nbsp</a>
           <a class="primary-button2" href="#services" onclick="eligeTestNegativo(1)">No</a>
         </div>
       </div>
       <div class="pregunta2">
         <span class="pregunta-google">¿Crees que Google sabe qué nivel de estudios tienes?</span>
         <div class="botones">
-          <a class="primary-button1" href="#services" onclick="eligeTest()">Sí</a>
+          <a class="primary-button1" href="#services" onclick="eligeTest()">&nbspSí&nbsp</a>
           <a class="primary-button2" href="#services" onclick="eligeTestNegativo(2)">No</a>
         </div>
       </div>
       <div class="pregunta3">
         <span class="pregunta-google">¿Crees que Google sabe que hiciste el pasado fin de semana?</span>
         <div class="botones">
-          <a class="primary-button1" href="#services" onclick="eligeTest()">Sí</a>
+          <a class="primary-button1" href="#services" onclick="eligeTest()">&nbspSí&nbsp</a>
           <a class="primary-button2" href="#services" onclick="eligeTestNegativo(3)">No</a>
         </div>
       </div>
       <div class="pregunta4">
         <span class="pregunta-google">¿Crees qué si desactivas el GPS, Google puede llegar a conocer tu posición?</span>
         <div class="botones">
-          <a class="primary-button1" href="#services" onclick="eligeTest()">Sí</a>
+          <a class="primary-button1" href="#services" onclick="eligeTest()">&nbspSí&nbsp</a>
           <a class="primary-button2" href="#services" onclick="eligeTestNegativo(4)">No</a>
         </div>
       </div>
       <div class="pregunta5">
         <span class="pregunta-google">¿Tienes el asistente de Google?</span>
         <div class="botones">
-          <a class="primary-button1" href="#services" onclick="eligeTest(8)">Sí</a>
+          <a class="primary-button1" href="#services" onclick="eligeTest(8)">&nbspSí&nbsp</a>
           <a class="primary-button2" href="#services" onclick="eligeTestNegativo(5)">No</a>
         </div>
       </div>
       <div class="pregunta6">
         <span class="pregunta-google">¿Crees que Google podría estar leyendo tus correos de Gmail?</span>
         <div class="botones">
-          <a class="primary-button1" href="#services" onclick="eligeTest()">Sí</a>
+          <a class="primary-button1" href="#services" onclick="eligeTest()">&nbspSí&nbsp</a>
           <a class="primary-button2" href="#services" onclick="eligeTestNegativo(6)">No</a>
         </div>
       </div>
       <div class="pregunta7">
         <span class="pregunta-google">¿Sabías que Google espía a tus hijos?</span>
         <div class="botones">
-          <a class="primary-button1" href="#services" onclick="eligeTest()">Sí</a>
+          <a class="primary-button1" href="#services" onclick="eligeTest()">&nbspSí&nbsp</a>
           <a class="primary-button2" href="#services" onclick="eligeTestNegativo(7)">No</a>
         </div>
       </div>
       <div class="pregunta8">
         <span class="pregunta-google">¿Crees que las conversaciones que tienes con tu asistente son privadas?</span>
         <div class="botones">
-          <a class="primary-button1" href="#services" onclick="eligeTestNegativo(8)">Sí</a>
+          <a class="primary-button1" href="#services" onclick="eligeTestNegativo(8)">&nbspSí&nbsp</a>
           <a class="primary-button2" href="#services" onclick="eligeTest()">No</a>
         </div>
       </div>
       <div class="pregunta9">
         <span class="pregunta-google">¿Crees que Google sabe qué contactos tienes en el móvil?</span>
         <div class="botones">
-          <a class="primary-button1" href="#services" onclick="eligeTest()">Sí</a>
+          <a class="primary-button1" href="#services" onclick="eligeTest()">&nbspSí&nbsp</a>
           <a class="primary-button2" href="#services" onclick="eligeTestNegativo(9)">No</a>
         </div>
       </div>
