Fix: footer Google

--- a/tests/google/testGoogle.html
+++ b/tests/google/testGoogle.html
@@ -205,7 +205,7 @@
   <footer>
     <div class="contenido">
         <div class="botones_inferiores">
-                    <a class="footer_button" id="subir" href="#respuestas">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspSubir&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</a>
+                    <a class="footer_button" id="subir" href="#respuestas">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspSubir&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</a>
                     <a class="footer_button" href="../../index.html">Página principal</a>
                   </div>
                 <ul>
