--- a/tests/amazon/amazon.html
+++ b/tests/amazon/amazon.html
@@ -198,7 +198,7 @@
             </div>
         </div>
         <div class="respuestas">
-            <span id="resultado" class="arreglo"></span>
+            <span id="resultado"></span>
             <div class="service-content" id="services">
                 <div class="container">
                     <div class="row">
@@ -362,7 +362,7 @@
             </div>
         </div>
     </div>
-    <img id="imagenAmzn" src="amzn.png">
+    <img id="imagenAmzn" src="amzn.png" style="position: fixed;right: 20px;bottom: 20px;height: 150px;width: 200px">
     <a href="../../index.html" style="position: fixed;left: 20px;top: 20px;font-size: 2em;color: #f99602;">&#9668 Tests</a>
 </div>
 
