add: instagram, facebook, whatsapp

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     
         <!-- Primera pantalla -->
         <div class="parallax-content baner-content" id="home">
-            <div class="container">
+            <div class="container mainprincipal">
                 <div class="first-content">
                     <h1>Testeate</h1>
                     <span><em> Si el servicio es gratuito, </em>el producto eres tú</span>
