add: instagram, facebook, whatsapp

--- a/tests/instagram/instagram.html
+++ b/tests/instagram/instagram.html
@@ -85,7 +85,7 @@
             </div>
           </div>
 
-          <div class="respuestas">
+          <div class="respuestas backg">
             <span id="resultado"></span>
             <div class="service-content" id="services">
                 <div class="container">
