add: instagram, facebook, whatsapp

--- a/tests/whatsapp/whatsapp.html
+++ b/tests/whatsapp/whatsapp.html
@@ -117,7 +117,7 @@
                                   <div class="service-item">
                                       <h4>¿Whatsapp accede al nivel de bateria de tu teléfono?</h4>
                                       <div class="line-dec"></div>
-                                      <p class="cont">Sí, tal y como se detala en las nuevas condiciones de uso publicadas el 4 de enero de 2021 permites a Whatsapp recopilar información sobre el nivel de bateria de tu dispositivo en todo momento.</p>
+                                      <p class="cont">Sí, tal y como se detalla en las nuevas condiciones de uso publicadas el 4 de enero de 2021 permites a Whatsapp recopilar información sobre el nivel de bateria de tu dispositivo en todo momento.</p>
                                     <div class="ares"><a class="boton_respuesta" href="https://computerhoy.com/noticias/tecnologia/pasa-dejas-whatsapp-estan-justificadas-nuevas-condiciones-whatsapp-detalle-787913">Saber más</a></div>
                                   </div>
                               </div>
@@ -125,7 +125,7 @@
                                 <div class="service-item">
                                     <h4>¿Y a la intensidad de la señal que este recibe?</h4>
                                     <div class="line-dec"></div>
-                                    <p class="cont">Sí, tal y como se detala en las nuevas condiciones de uso publicadas el 4 de enero de 2021 permites a Whatsapp recopilar información sobre la intensidad de la señal que recibe tu dispositivo en todo momento.</p>
+                                    <p class="cont">Sí, tal y como se detalla en las nuevas condiciones de uso publicadas el 4 de enero de 2021 permites a Whatsapp recopilar información sobre la intensidad de la señal que recibe tu dispositivo en todo momento.</p>
                                   <div class="ares"><a class="boton_respuesta" href="https://computerhoy.com/noticias/tecnologia/pasa-dejas-whatsapp-estan-justificadas-nuevas-condiciones-whatsapp-detalle-787913">Saber más</a></div>
                                 </div>
                             </div>
