--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                 <div class="service-item">
                                     <h4>Twitter</h4>
                                     <div class="line-dec"></div>
-                                    <a class="boton_respuesta" href="tests/test.html">Empezar test</a>
+                                    <a class="boton_respuesta" href="tests/twitter/twitter.html">Empezar test</a>
                                 </div>
                             </div>
                         </div>
