--- a/tests/twitter/twitter.html
+++ b/tests/twitter/twitter.html
@@ -26,56 +26,56 @@
           <div class="pregunta1">
             <span>¿Eres usuario activo de Twitter?</span>
             <div class="botones">
-              <a href="#services" onclick="siguiente(1,2,1)">SI</a>
+              <a href="#services" onclick="siguiente(1,2,1)"><i class="fas fa-heart"></i></a>
               <a href="#services" onclick="siguiente(1,2,1)">NO</a>
             </div>
           </div>
           <div class="pregunta2">
             <span>¿Al crear una cuenta en Twitter aceptas automáticamente todos sus términos y condiciones?</span>
             <div class="botones">
-              <a href="#services" onclick="siguiente(2,3,1)">SI</a>
+              <a href="#services" onclick="siguiente(2,3,1)"><i class="fas fa-heart"></i></a>
               <a href="#services" onclick="siguiente(2,3,0)">NO</a>
             </div>
           </div>
           <div class="pregunta3">
             <span>¿Sabes con qué finalidad recoge y trata tus datos Twitter?</span>
             <div class="botones">
-              <a href="#services" onclick="siguiente(3,4,1)">SI</a>
+              <a href="#services" onclick="siguiente(3,4,1)"><i class="fas fa-heart"></i></a>
               <a href="#services" onclick="siguiente(3,4,0)">NO</a>
             </div>
           </div>
           <div class="pregunta4">
             <span>¿Sabes con cuánto tiempo conserva tus datos Twitter?</span>
             <div class="botones">
-              <a href="#services" onclick="siguiente(4,5,1)">SI</a>
+              <a href="#services" onclick="siguiente(4,5,1)"><i class="fas fa-heart"></i></a>
               <a href="#services" onclick="siguiente(4,5,0)">NO</a>
             </div>
           </div>
           <div class="pregunta5">
-            <span>Pregunta 5</span>
+            <span>¿Google o Facebook pueden acceder a los datos recogidos por Twitter?</span>
             <div class="botones">
-              <a href="#services" onclick="siguiente(5,6,1)">SI</a>
+              <a href="#services" onclick="siguiente(5,6,1)"><i class="fas fa-heart"></i></a>
               <a href="#services" onclick="siguiente(5,6,0)">NO</a>
             </div>
           </div>
           <div class="pregunta6">
             <span>Pregunta 6</span>
             <div class="botones">
-              <a href="#services" onclick="siguiente(6,7,0)">SI</a>
+              <a href="#services" onclick="siguiente(6,7,0)"><i class="fas fa-heart"></i></a>
               <a href="#services" onclick="siguiente(6,7,1)">NO</a>
             </div>
           </div>
           <div class="pregunta7">
             <span>Pregunta 7</span>
             <div class="botones">
-              <a href="#services" onclick="siguiente(7,8,1)">SI</a>
+              <a href="#services" onclick="siguiente(7,8,1)"><i class="fas fa-heart"></i></a>
               <a href="#services" onclick="siguiente(7,8,0)">NO</a>
             </div>
           </div>
           <div class="pregunta8">
             <span>Pregunta 8</span>
             <div class="botones">
-              <a href="#services" onclick="siguiente(8,9,0)">SI</a>
+              <a href="#services" onclick="siguiente(8,9,0)"><i class="fas fa-heart"></i></a>
               <a href="#services" onclick="siguiente(8,9,1)">NO</a>
             </div>
           </div>
@@ -83,7 +83,7 @@
           <div class="pregunta9">
             <span>Pregunta 9</span>
             <div class="botones">
-              <a href="#services" onclick="siguiente(9,-1,0);resultado()">SI</a>
+              <a href="#services" onclick="siguiente(9,-1,0);resultado()"><i class="fas fa-heart"></i></a>
               <a href="#services" onclick="siguiente(9,-1,1);resultado()">NO</a>
             </div>
           </div>
@@ -123,7 +123,7 @@
                               </div>
                               <div class="divser col-md-4 P5">
                                 <div class="service-item">
-                                    <h4>Pregunta 5</h4>
+                                    <h4>¿Google o Facebook pueden acceder a los datos recogidos por Twitter?</h4>
                                     <div class="line-dec"></div>
                                     <p class="cont">RESPUESTA 5.</p>
                                 </div>
