--- a/tests/twitter/twitter.html
+++ b/tests/twitter/twitter.html
@@ -59,14 +59,14 @@
             </div>
           </div>
           <div class="pregunta6">
-            <span>Pregunta 6</span>
+            <span>¿Twitter sabe qué lugares has visitado?</span>
             <div class="botones">
-              <a href="#services" onclick="siguiente(6,7,0)"><i class="fa fa-heart"></i></a>
-              <a href="#services" onclick="siguiente(6,7,1)"><i class="fa fa-times" aria-hidden="true"></i></a>
+              <a href="#services" onclick="siguiente(6,7,1)"><i class="fa fa-heart"></i></a>
+              <a href="#services" onclick="siguiente(6,7,0)"><i class="fa fa-times" aria-hidden="true"></i></a>
             </div>
           </div>
           <div class="pregunta7">
-            <span>Pregunta 7</span>
+            <span>¿Twitter sabe qué apps tiened instaladas en tu dispositivo?</span>
             <div class="botones">
               <a href="#services" onclick="siguiente(7,8,1)"><i class="fa fa-heart"></i></a>
               <a href="#services" onclick="siguiente(7,8,0)"><i class="fa fa-times" aria-hidden="true"></i></a>
@@ -101,23 +101,25 @@
                                     <div class="service-item">
                                         <h4>¿Al crear una cuenta en Twitter aceptas automáticamente todos sus términos y condiciones?</h4>
                                         <div class="line-dec"></div>
-                                        <p class="cont">RESPUESTA 2.</p>
-
+                                        <p class="cont">Al registrarse, implícitamente estás dando tu consentimiento a Twitter para recopilar y tratar tus datos. 
+										No hay una casilla en particular que haya que marcar, simplemente un mensaje: "Al registrarte, aceptas los Términos, la Política de privacidad y la Política de cookies."</p>
+										<div class="ares"> <a class="boton_respuesta" href="https://twitter.com/es/privacy">Más información</a></div>
                                     </div>
                                 </div>
                                 <div class="divser col-md-4 P3">
                                     <div class="service-item">
                                         <h4>¿Sabes con qué finalidad recoge y trata tus datos Twitter?</h4>
                                         <div class="line-dec"></div>
-                                        <p class="cont">RESPUESTA 3.</p>
-                                      <!--<div class="ares"> <a class="boton_respuesta" href="https://www.whatsapp.com/legal/updates/privacy-policy/?lang=es">Saber más</a></div>-->
+                                        <p class="cont">Según Twitter, recogen tus datos para mejorar la experiencia como usuario y para
+										controlar que no estés subiendo contenido ilícito.</p>
+										<div class="ares"> <a class="boton_respuesta" href="https://twitter.com/es/tos#new">Más información</a></div>
                                     </div>
                                 </div>
                                 <div class="divser col-md-4 P4">
                                   <div class="service-item">
                                       <h4>¿Sabes con cuánto tiempo conserva tus datos Twitter?</h4>
                                       <div class="line-dec"></div>
-                                      <p class="cont">RESPUESTA 4.</p>
+                                      <p class="cont">Twitter conserva los datos 18 meses, cumpliendo la legislación, que dicta quer como máximo pueden conservarlos 2 años.</p>
                                   
                                   </div>
                               </div>
@@ -130,14 +132,14 @@
                             </div>
                             <div class="divser col-md-4 P6">
                               <div class="service-item">
-                                  <h4>Pregunta 6</h4>
+                                  <h4>¿Twitter sabe qué lugares has visitado?</h4>
                                   <div class="line-dec"></div>
                                   <p class="cont">RESPUESTA 6.</p>
                               </div>
                           </div>
                                 <div class="divser col-md-4 P7">
                                     <div class="service-item">
-                                        <h4>Pregunta 7</h4>
+                                        <h4>¿Twitter sabe qué apps tiened instaladas en tu dispositivo?</h4>
                                         <div class="line-dec"></div>
                                         <p class="cont">RESPUESTA 7.</p>
                                     </div>
