--- a/index.html
+++ b/index.html
@@ -113,11 +113,9 @@
                         <img class="contador-img" style="border: 0px solid; display: inline;" alt="contador de visitas" src="http://www.websmultimedia.com/contador-de-visitas.php?id=288972"></a>
                     
                     <ul>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                         <li><a target="_blank" href="https://www.instagram.com/testeateconuwu/"><i class="fa fa-instagram"></i></a></li>
-
                     </ul>
+					<a href="img/by-nc-sa.png"><i class="fa fa-facebook"></i></a>
                 </div>
     </footer>
 
